welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:3: error: identifier expected but 'var' found.
var nbBiscuit:var = 0;
              ^RunHalf:4: error: identifier expected but 'var' found.
var caseOrange: var = 0;
                ^